[build-system]
requires = ["setuptools>=82.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecgdatakit"
dynamic = ["version"]
description = "Multi-format ECG file parsing and signal processing library"
authors = [{name = "Ahmad Fall", email = "ahmad.fall@ird.fr"}]
maintainers = [{name = "Ahmad Fall", email = "ahmad.fall@ird.fr"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "defusedxml>=0.7.1",
    "xmltodict>=1.0",
    "python-dateutil>=2.9",
]
keywords = ["ecg", "electrocardiogram", "signal-processing", "medical", "waveform", "hl7", "dicom", "edf", "scp-ecg", "wfdb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/UMMISCO/ECGDataKit"
Documentation = "https://ecgdatakit.ummisco.fr"
Repository = "https://github.com/UMMISCO/ECGDataKit"
Issues = "https://github.com/UMMISCO/ECGDataKit/issues"
Mirror = "https://git.ummisco.fr/open/ecgdatakit"
UMMISCO = "https://www.ummisco.fr"
IRD = "https://www.ird.fr"

[project.optional-dependencies]
holter = ["PyCRC>=0.11"]

dicom = ["pydicom>=2.4"]
processing = ["scipy>=1.10"]
cleaning = ["biosppy", "neurokit2"]
denoising = ["torch>=2.0"]
plotting = ["matplotlib>=3.7"]
plotting-interactive = ["plotly>=5.15"]
all = [
    "scipy>=1.10",
    "matplotlib>=3.7",
    "plotly>=5.15",
    "biosppy",
    "neurokit2",
]
dev = ["pytest>=9.0", "pytest-cov>=7.0", "ruff>=0.15"]
docs = [
    "sphinx>=8.0",
    "furo>=2024.8",
    "myst-parser>=4.0",
    "sphinx-autodoc-typehints>=2.0",
    "sphinx-copybutton>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ecgdatakit.processing.nn" = ["weights/*.pt"]

[tool.setuptools.dynamic]
version = {attr = "ecgdatakit.__version__"}

[tool.ruff]
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
